dons_tests/valid_kxi/main_callable.kxi
class MyClass {
    static public void myfunc() {
        main();
    }
}
void main(){}
