dons_tests/invalid_kxi/invalid_constructor.kxi
class MyClass { 
    public int x;
    static public char y;
    derp(int a, int b) {}
    public int[] myfunc() {}
}
void main(){}
